# quittances-rust

./: Cargo.toml  example.conf.toml
src/: cli.yaml  main.rs  utils.rs
src/utils/: date.rs
