[package]
name = "quittance"
version = "0.1.0"
authors = ["nico <crop.nicolas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.4"
serde_derive = "1.0.37"
serde = "1.0.37"
clap = {version = "~2.27.0", features = ["yaml"]}
chrono = "0.4"
log = "0.4"
